Yuyang Sun edited

--- a/STATS3DA3_A6.ipynb
+++ b/STATS3DA3_A6.ipynb
@@ -2866,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "b8fec31a",
    "metadata": {},
    "outputs": [
@@ -2925,6 +2925,7 @@
     }
    ],
    "source": [
+    "#Copilot is used for assistance\n",
     "# Split the data into training and testing sets\n",
     "print(\"DataFrame columns:\", clust_df_scaled.columns)\n",
     "target_column = 'num'\n",
